# mason-app

./: .gitignore  .oxlintrc.json  AGENTS.md  AGGREGATE_BOUNDARIES_EXAMPLE.md  ARCHITECTURE_REVIEW.md  BARREL_REMOVAL_SUMMARY.md  README.md  biome.json  biome.jsonc  bun.lockb  docker-compose.yml  package.json  plan.md  todo.md  tsconfig.json  turbo.json
.cursor/: .cursorrules.mdc  mcp.json  rules.md
.cursor/commands/: effect-domain-modelling.md  effect-domain-predicates.md  effect.md
.cursor/rules/: base-ui.mdc  effect.mdc  ultracite.mdc
.opencode/plans/: time-module-refactor.md
.tmp_atom_react/package/: package.json
.zed/: settings.json
_interface/: package.json
apps/_server/: package.json  tsconfig.json
apps/backend/: package.json  railway.json  tsconfig.json
apps/desktop/: .gitignore  package.json  requirements.txt  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs
apps/desktop/src-tauri/src/commands/: capture_window_activity.rs  platform.rs
apps/desktop/src-tauri/src/commands/ai/: inference.rs
apps/desktop/src-tauri/src/commands/platform/macos/: capture_screenshots.rs
apps/electric-proxy/: package.json  railway.json  tsconfig.json
apps/server/: README.md  package.json  tsconfig.json
apps/web/: package.json  tailwind.config.js  tsconfig.json  (+1 more)
interface/: .oxlintrc.json  README.md  drizzle.config.ts  package.json  tsconfig.json  vite.config.ts
messages/: en.json
patches/: better-auth@1.3.34.patch  better-auth@1.3.4.patch
(+440 files in other folders)
